snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/maven-metadata.xml.sha1
c0afc11499acc11e3467baf0a70fc2b2f39dca60